# diy-esp32s3-epub-reader

./: .gitignore  .gitmodules  AGENT.md  README.md  partitions.csv  platformio.ini  sdkconfig.paper_s3_idf
M5StackWiFiUploader/src/: Config.h  ErrorHandler.cpp  ErrorHandler.h  M5StackWiFiUploader.cpp  M5StackWiFiUploader.h  RetryManager.cpp  SDCardManager.cpp  WebSocketHandler.cpp  WebSocketHandler.h
firmware/m5paper/: README.md
lib/Epub/: GlobalState.h
lib/Epub/EpubList/: Epub.cpp  Epub.h  EpubList.cpp  EpubList.h  EpubReader.cpp  EpubToc.cpp  State.h
lib/Epub/Renderer/: ConsoleRenderer.h  EpdiyFrameBufferRenderer.h  JPEGHelper.cpp  JPEGHelper.h  M5GfxRenderer.cpp  M5GfxRenderer.h  PNGHelper.cpp  PNGHelper.h  Renderer.h
lib/Epub/RubbishHtmlParser/: RubbishHtmlParser.cpp
lib/Epub/ZipFile/: ZipFile.cpp  ZipFile.h
lib/FastEPD/: .gitmodules  CMakeLists.txt  README.md  library.properties
lib/FastEPD/Fonts/: Roboto_Black_160.h  Roboto_Black_20.h  Roboto_Black_80.h
lib/FastEPD/examples/esp_idf/www-image/main/: CMakeLists.txt  jpgdec-render.cpp  settings.h
lib/FastEPD/fontconvert/: Makefile  main.c
lib/FastEPD/src/: FastEPD.cpp  FastEPD.h  FastEPD.inl  arduino_io.inl
lib/JPEGDEC/src/: s3_simd_dequant.S
lib/PNGdec/src/: PNGdec.h  png.inl
lib/miniz-3.1.0/: miniz.c
src/: config.h  main.cpp  sleep_image.h
src/boards/: Board.cpp  M5Paper.cpp  M5Paper.h
src/boards/battery/: M5PaperBattery.cpp  M5PaperBattery.h
src/boards/controls/: ButtonControls.h  M5PaperButtonControls.cpp  M5PaperButtonControls.h  M5PaperTouchControls.cpp  M5PaperTouchControls.h  (+2 more)
(+42 files in other folders)
